--- a/src/bootstrap-custom.scss
+++ b/src/bootstrap-custom.scss
@@ -10,3 +10,4 @@
 @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/progress";
