--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ code {
 }
 
 .App {
-    text-align: center;
+    /* text-align: center; */
 }
 
 .App-logo {
@@ -22,12 +22,13 @@ code {
 
 .App-header {
     background-color: #333;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    min-height: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    /* font-size: calc(10px + 2vmin); */
     color: white;
 }
 
@@ -43,9 +44,29 @@ code {
 .progress {
     width: 19rem;
     background-color: lightblue;
-    height: 0.5rem;
+    height: 0.4rem;
 }
 
 .progress-bar {
-    width: 75%;
+    width: 50%;
+}
+
+.slide-in-top {
+    -webkit-animation: slide-in-top 2s cubic-bezier(0.6, 0.04, 0.98, 0.335) both;
+    animation: slide-in-top 2s cubic-bezier(0.6, 0.04, 0.98, 0.335) both;
+}
+.App-header {
+    background: black;
+    animation: color-me-in 5s; /* other keywords like "infinite alternate" can be useful here */
+}
+
+@keyframes color-me-in {
+    /* You could think of as "step 1" */
+    0% {
+        background: orange;
+    }
+    /* You could think of as "step 2" */
+    100% {
+        background: black;
+    }
 }
