--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ code {
     min-height: 40px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     /* font-size: calc(10px + 2vmin); */
     color: white;
@@ -42,13 +42,10 @@ code {
 }
 
 .progress {
-    width: 19rem;
     background-color: lightblue;
     height: 0.4rem;
-}
-
-.progress-bar {
-    width: 50%;
+    grid-column-start: 1;
+    grid-column-end: span 2;
 }
 
 .slide-in-top {
@@ -65,8 +62,45 @@ code {
     0% {
         background: orange;
     }
+    50% {
+        background: green;
+    }
     /* You could think of as "step 2" */
     100% {
         background: black;
     }
+}
+
+.grid-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
+
+.grid-item-1 {
+    grid-column-start: 1;
+}
+
+.grid-item-2 {
+    grid-column-start: 2;
+}
+
+.moleculeProgress {
+    width: 19rem;
+}
+
+.text-left {
+    text-align: left !important;
+}
+
+.text-right {
+    text-align: right !important;
+}
+
+.text-center {
+    text-align: center !important;
+}
+
+.smallest-text {
+    font-size: 0.9rem;
 }
